projects/nala/reports/login.login/2022.08.30.20.36.02.618/login.login/execution_info.log
20:36:02.813 INFO Test execution started: login.login
20:36:02.813 INFO Browser: chrome
20:36:02.813 ERROR SyntaxError: invalid syntax. Perhaps you forgot a comma?
  File "/home/lautaro/test_directory/projects/nala/tests/login/login.py", line 13
    verify_element_text('MuiButtonBase-root MuiButton-root MuiButton-text sc-bdvvtL dfZNzl submit general sc-eEvSnX YjAsf MuiButton-fullWidth', Welcome back!)
                                                                                                                                                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

